@@ -1,9 +1,9 @@
 package com.example.authdemo.controller;
 
-import com.example.authdemo.service.AccountDetailsServiceImpl;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -19,17 +19,17 @@ import org.springframework.web.bind.annotation.RestController;
 @RequiredArgsConstructor
 public class UserController {
 
-    private final AccountDetailsServiceImpl userDetailsService;
+    private final UserDetailsService userDetailsService;
 
     @GetMapping
     public String getCurrentUser() {
         log.info(SecurityContextHolder.getContext().getAuthentication().toString());
         final String name = SecurityContextHolder.getContext().getAuthentication().getName();
-        return String.format("hello %s\n", name) + SecurityContextHolder.getContext().getAuthentication().getDetails().toString();
+        return "hello %s\n".formatted(name) + SecurityContextHolder.getContext().getAuthentication().getDetails().toString();
     }
 
     @GetMapping("{username}")
-    public String getByUsername(@PathVariable("username") String username) {
+    public String getByUsername(@PathVariable String username) {
         return userDetailsService.loadUserByUsername(username).toString();
     }
 }
